# JustRepositoryForSomeTest

./: CMakeLists.txt  SomeNotesForSeniorIDK.txt  problem01.cpp  problem04.cpp  problem06.cpp  problem07.cpp  problem09.cpp  problem10.cpp  send_request.py
.github/workflows/: build-and-test.yml  send_request.py
.justsomenotes/: SomeNotesForSeniorIDK
practice-1-rachmiroff-main/: problem02.cpp  problem03.cpp  problem05.cpp  problem08.cpp  problem10.cpp
